crates/strider-analyze/tests/snapshots/v3__x64__abi__tail_caller.snap
---
source: crates/strider-analyze/tests/v3_baseline.rs
assertion_line: 177
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x401200:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "7" -> "1" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "8" -> "1" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "9" -> "1" [color="#ff8800", label=arg5, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff8800", label=arg6, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#ff8800", label=arg7, fontcolor="#cccccc", fontsize=9];
  "10" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "1" -> "10" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "11" -> "10" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v12" [label="Post Call\nRAX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v12" [color="#888888", style=dashed];
  "v12" -> "10" [color="#88cc88", label=RAX, fontcolor="#cccccc", fontsize=9];
  "13" -> "10" [color="#88cc88", label=RDX, fontcolor="#cccccc", fontsize=9];
  "v14" [label="Post Call\nXMM0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v14" [color="#888888", style=dashed];
  "v14" -> "10" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "v15" [label="Post Call\nXMM1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v15" [color="#888888", style=dashed];
  "v15" -> "10" [color="#88cc88", label=XMM1, fontcolor="#cccccc", fontsize=9];
  "13" [label="Load u64\n← ram", shape=box3d, fillcolor="#102030"];
  "16" -> "13" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "17" -> "13" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "17" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "18" -> "17" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "19" -> "17" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "19" [label="const 0x1fffffffffffffff0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "18" [label="init\nRSP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "16" [label="MemPartition[MemPartitionId(1)]", shape=trapezium, fillcolor="#3a1a4a"];
  "1" -> "16" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "11" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "1" -> "11" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "5" [label="init\nRSI", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="init\nRDI", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "20" -> "9" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "20" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "5" -> "20" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "8" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "21" -> "8" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "21" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "4" -> "21" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "7" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "20" -> "7" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "6" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "21" -> "6" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "2" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "22" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "22" [label="StackStore u64\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "23" -> "22" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v24" [label="init\nRSP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v24" -> "22" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "25" -> "22" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "25" [label="const 0x401275:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "23" [label="StackStore u64\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "26" -> "23" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v27" [label="init\nRSP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v27" -> "23" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "4" -> "23" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "26" [label="StackStore u64\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "28" -> "26" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v29" [label="init\nRSP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v29" -> "26" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "5" -> "26" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "28" [label="MemPartition[MemPartitionId(0)]", shape=trapezium, fillcolor="#3a1a4a"];
  "30" -> "28" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "30" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
